--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.27.0",
+    "globals": "^15.8.0",
+    "prettier": "^3.3.3",
+    "typescript-eslint": "^7.17.0",
     "vite": "^5.2.8"
   }
 }
