--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-vue": "^9.27.0",
     "globals": "^15.8.0",
     "prettier": "^3.3.3",
+    "sass": "^1.80.4",
     "typescript-eslint": "^7.17.0",
     "vite": "^5.2.8"
   }
