--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.8.8",
     "vue": "^3.4.21"
   },
   "devDependencies": {
@@ -22,6 +23,8 @@
     "prettier": "^3.3.3",
     "sass": "^1.80.4",
     "typescript-eslint": "^7.17.0",
+    "unplugin-auto-import": "^0.18.4",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.2.8"
   }
 }
